Fix Repo Monitor columns
The repo type column is too small on small screens. This makes
it 20px all the time.

see: #178

--- a/www/wp-content/mu-plugins/quickstart-dashboard/css/dashboard.css
+++ b/www/wp-content/mu-plugins/quickstart-dashboard/css/dashboard.css
@@ -18,7 +18,7 @@
 }
 
 .vip-dashboard-table .column-repo_type {
-	width: 3%;
+	width: 20px;
 }
 
 .vip-dashboard-table .column-status {
